c/examples/writing-a-c-compiler-tests/tests/chapter_11/invalid_types/cast_lvalue.c
/* The result of a cast expression is not an lvalue */

int main(void) {
    int i = 0;
    i = (long) i = 10;
    return 0;
}